push til things done in asana january

--- a/web/src/app/events/events.component.html
+++ b/web/src/app/events/events.component.html
@@ -2,10 +2,30 @@
   <div class="container">
     <div class="div1">
         <div class="text">
-            <h1 style="margin-top: 2em;">Eventos</h1>
+            <h1>Eventos</h1>
         </div>
     </div>
     <div class="line"></div>
+    <div class="div2">
+      <div class="row">
+        <div class="col-8">
+            <p class="text">
+                Caminitos de Letras Cultura es un programa radial en el cual se hace homenaje a la poesía en
+                todas sus manifestaciones, sus directoras son Julieta Felicioni, Eugenia Felicioni, Claudia
+                Valenzuela y Marcela Valenzuela, el programa cuenta con el elenco de Radioteatro Recuerdos y
+                el elenco de Teatro Leído Tierra del Fuego. 
+                <b>Trabaja promocionando la lectura en radio
+                desde el año 2012 hasta la actualidad.</b>
+                Transmite todos los martes de 21:00 a 23:00 hs por
+                Radio Nacional Ushuaia FM 92.1 TDF.
+                
+            </p>
+        </div>
+          <div class="col-4">
+              <img src="../../assets/img/image2.png" alt="3" class="image">
+          </div>
+      </div>
+    </div>
     <div class="events">
       <ul class="list">
         <li (click)="goToEvent('eventId')">
@@ -25,7 +45,7 @@
               </h3>
             </div>
           </div>
-          <hr>
+          <hr class="divider">
         </li>
         <li>
           <div class="row">
@@ -44,7 +64,7 @@
               </h3>
             </div>
           </div>
-          <hr>
+          <hr class="divider">
         </li>
       </ul>
     </div>
