--- a/web/src/app/audios/audios.component.scss
+++ b/web/src/app/audios/audios.component.scss
@@ -22,35 +22,14 @@
     }
     .text {
         position: absolute;
-        // margin: 2em;
         color: $color_4;
         h1 {
-            font-size: 4.5rem;
+            font-size: 5rem;
+            margin-top: 2em;
         }
         width: 100%;
         height: 100%;
         text-align: center;
-    }
-    .bottom {
-        position: absolute;
-        bottom: 0px;
-        width: 100%;
-        height: 10vh;
-        display: flex;
-        justify-content: center;
-
-        .text {
-            background: $dark;
-            color: $color_3;
-            width: auto;
-            display: inline-block;
-            padding: 1em;
-            margin: 0em;
-            h2 {
-                margin: 0em;
-                display: inline-block;
-            }
-        }
     }
 }
 
