--- a/web/src/app/events/events.component.scss
+++ b/web/src/app/events/events.component.scss
@@ -22,34 +22,35 @@
     }
     .text {
         position: absolute;
-        // margin: 2em;
         color: $color_4;
         h1 {
-            font-size: 4.5rem;
+            font-size: 5rem;
+            margin-top: 2em;
         }
         width: 100%;
         height: 100%;
         text-align: center;
     }
-    .bottom {
-        position: absolute;
-        bottom: 0px;
-        width: 100%;
-        height: 10vh;
-        display: flex;
-        justify-content: center;
+}
+.div2 {
+    margin-top: 1em;
+    background-color: $dark;
+    .image {
+        width: 70%;
+        // height: 100%;
+        padding: 1em;
+    }
 
-        .text {
-            background: $dark;
-            color: $color_3;
-            width: auto;
-            display: inline-block;
-            padding: 1em;
-            margin: 0em;
-            h2 {
-                margin: 0em;
-                display: inline-block;
-            }
+    .text {
+        // display: flex;
+        align-items: center;
+        color: white;
+        padding: 2em;
+        margin: 0em;
+        height: 100%;
+        font-size: 1.1em;
+        br {
+            margin: 0.3em;
         }
     }
 }
@@ -85,6 +86,7 @@
         hr {
             margin: 0em;
             background: $pink;
+            margin-right: 2em;
         }
     }
 }
