--- a/web/src/app/home/home.component.scss
+++ b/web/src/app/home/home.component.scss
@@ -45,11 +45,15 @@ br {
     }
     .text {
         position: absolute;
-        margin: 2em;
         color: $color_4;
         h1 {
-            font-size: 4.5rem;
+            
+            font-size: 5rem;
+            margin-top: 2em;
         }
+        width: 100%;
+        height: 100%;
+        text-align: center;
     }
     .bottom {
         position: absolute;
@@ -103,6 +107,19 @@ br {
             margin: 0.3em;
         }
     }
+}
+
+.carrusel {
+    width: 100%;
+    height: 100%;
+    .slide {
+        text-align: center;
+        .item {
+            width: 35%;
+            height: auto;
+        }
+    }
+    
 }
 
 .sections {
