--- a/web/src/app/shared/footer/footer.component.scss
+++ b/web/src/app/shared/footer/footer.component.scss
@@ -1,10 +1,35 @@
 @import "../../../assets/variables";
 
 .footer {
-    height: 6em;
-    background-color: black;
+    height: 8em;
+    // background-color: black;
     position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
+    z-index: 1000;
+
+    .hidder {
+        padding-right: 1em;
+        .button {
+            float: right;
+            border: none;
+            background-color: $pink;
+            color: white;
+            border-radius: 10px;
+            width: 7em;
+        }
+        .buttonRep {
+            float: right;
+            border: none;
+            background-color: $pink;
+            color: white;
+            border-radius: 50px;
+            width: 7em;
+            width: 6em;
+            height: 3em;
+            margin: 1em;
+        }
+    }
 }
+
