--- a/web/src/app/video/video.component.html
+++ b/web/src/app/video/video.component.html
@@ -1,3 +1,62 @@
-<p>
-  video works!
-</p>
+<div>
+  <div class="container">
+    <div class="div1">
+      <div class="text">
+          <h1>Videos</h1>
+      </div>
+  </div>
+  <div class="line"></div>
+  <div class="title">
+      <div class="row">
+        <div class="col-8">
+          <h1>
+            programas
+          </h1>
+        </div>
+        <div class="col-4">
+          <i class="fas fa-microphone"></i>
+        </div>
+      </div>
+    </div>
+  <div class="audios">
+    <ul class="list">
+      <li>
+        <div class="element">
+          <h1>
+            Audio stream
+          </h1>
+          <h3>
+            “Todas las Voces” proyecto que tiene por objetivo transmitir, 
+            difundir y valorar las producciones de: radioteatros, cuentos,
+            leyendas, mensaje al poblador rural, relato deportivo e historias
+            de todas las provincias de nuestro País.  
+          </h3>
+          <iframe width="420" height="315"
+            src="https://www.youtube.com/embed/tgbNymZ7vqY">
+          </iframe>
+          <hr>
+        </div>
+      </li>
+      <li>
+        <div class="element">
+          <h1>
+            Audio stream
+          </h1>
+          <h3>
+            “Todas las Voces” proyecto que tiene por objetivo transmitir, 
+            difundir y valorar las producciones de: radioteatros, cuentos,
+            leyendas, mensaje al poblador rural, relato deportivo e historias
+            de todas las provincias de nuestro País.  
+          </h3>
+          <audio controls controlsList="nodownload">
+            <source src="../../assets/song.mpeg" type="audio/mpeg" >
+          Your browser does not support the audio element.
+          </audio>
+          <hr>
+        </div>
+      </li>
+    </ul>
+  </div>
+  </div>
+  <div class="footer-separator"></div>
+</div>
