--- a/web/src/app/videos/videos.component.html
+++ b/web/src/app/videos/videos.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="div1">
         <div class="text">
-            <h1 style="margin-top: 2em;">Videos</h1>
+            <h1>Videos</h1>
         </div>
     </div>
     <div class="line"></div>
