--- a/web/src/app/videos/videos.component.scss
+++ b/web/src/app/videos/videos.component.scss
@@ -25,32 +25,12 @@
         // margin: 2em;
         color: $color_4;
         h1 {
-            font-size: 4.5rem;
+            font-size: 5rem;
+            margin-top: 2em;
         }
         width: 100%;
         height: 100%;
         text-align: center;
-    }
-    .bottom {
-        position: absolute;
-        bottom: 0px;
-        width: 100%;
-        height: 10vh;
-        display: flex;
-        justify-content: center;
-
-        .text {
-            background: $dark;
-            color: $color_3;
-            width: auto;
-            display: inline-block;
-            padding: 1em;
-            margin: 0em;
-            h2 {
-                margin: 0em;
-                display: inline-block;
-            }
-        }
     }
 }
 
@@ -100,8 +80,6 @@
         padding: 3em;
         margin-bottom: 3em;
         margin-top: 3em;
-        margin-left: 1em;
-        margin-right: 1em;
         .fas {
             font-size: 5em;
             transition: .5s ease;
