--- a/web/src/assets/variables.scss
+++ b/web/src/assets/variables.scss
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Dosis:300,500,700&display=swap");
 
-$color_1: #d4ff2aff; //
+$color_1: #FF7380; //
 $color_2: #b4b4b4ff; //
 $color_3: #FFFFFF; // light
 $color_4: #FFFFFF; 
