--- a/web/src/app/audios/audios.component.scss
+++ b/web/src/app/audios/audios.component.scss
@@ -90,6 +90,14 @@
     }
 }
 
+// .province {
+//     width: fit-content;
+//     transition: .5s ease;
+// }
+// .province:hover path{
+//     fill: $pink;
+// }
+
 .footer-separator {
     height: 6em;
 }
