--- a/web/src/app/home/home.component.html
+++ b/web/src/app/home/home.component.html
@@ -55,6 +55,8 @@
                 </div>
             </div>
 
+            <!-- SLIDES -->
+
             <div class="carrusel">        
                 <carousel style="padding: 2em;">
                     <slide *ngFor="let slide of slides; let index=index" class="slide">
@@ -62,6 +64,8 @@
                     </slide>
                 </carousel>
             </div>
+
+            <!--  -->
 
             <div class="sections">
                 <div class="row">
