--- a/web/src/app/video/video.component.html
+++ b/web/src/app/video/video.component.html
@@ -31,7 +31,7 @@
             leyendas, mensaje al poblador rural, relato deportivo e historias
             de todas las provincias de nuestro País.  
           </h3>
-          <iframe width="420" height="315"
+          <iframe width="97%" height="350"
             src="https://www.youtube.com/embed/tgbNymZ7vqY">
           </iframe>
           <hr>
