--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-topmenu></app-topmenu>
 <router-outlet></router-outlet>
 <!-- <toast-container/> -->
-<app-footer></app-footer>
+<app-footer>
+    
+</app-footer>
