--- a/web/src/app/events/events.component.html
+++ b/web/src/app/events/events.component.html
@@ -69,5 +69,37 @@
       </ul>
     </div>
   </div>
-  <div class="footer-separator"></div>
+
+  
+  <div class="footer-separator">
+    <div class="footer-separator">
+      <footer class="pt-4 my-md-5 pt-md-5 border-top">
+          <div class="row">
+            <div class="col-12 col-md" style="padding-left: 5vh;">
+              <img class="mb-2" src="assets/img/image2.png" alt="" width="50" height="50">
+              <small class="d-block mb-3 text-muted">&copy; RADIO TANIA</small>
+            </div>
+            <div class="col-6 col-md">
+              <h5>INSTAGRAM</h5>
+              <ul class="list-unstyled text-small">
+                <li><a class="text-muted" href="#">@radiotania</a></li>
+              </ul>
+            </div>
+            <div class="col-6 col-md">
+              <h5>CONTACTANOS</h5>
+              <ul class="list-unstyled text-small">
+                <li><a class="text-muted" href="#">3518484782</a></li>
+         
+              </ul>
+            </div>
+            <div class="col-6 col-md">
+                <h5>NUSTRO CORREO</h5>
+              <ul class="list-unstyled text-small">
+                <li><a class="text-muted" href="#">radiotania@gmail.com</a></li>
+              </ul>
+            </div>
+          </div>
+        </footer>   
+      </div>
+  </div>
 </div>
