--- a/web/src/app/home/home.component.html
+++ b/web/src/app/home/home.component.html
@@ -57,6 +57,13 @@
 
             <!-- SLIDES -->
 
+            <div class="title">
+                <div class="text">
+                    <h1>
+                        PRESENTACIÓN
+                    </h1>
+                </div>
+            </div>
             <div class="carrusel">        
                 <carousel style="padding: 2em;">
                     <slide *ngFor="let slide of slides; let index=index" class="slide">
@@ -104,8 +111,192 @@
                     </div>
                 </div>
             </div>
+
+            <!-- CALENDAR -->
+
+            <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+
+            <div class="title">
+                <div class="text">
+                    <h1>
+                        CALENDARIO
+                    </h1>
+                </div>
+            </div>
+<div class="idance">
+    <div class="schedule content-block">
+        <div class="container">
+        
+            <div class="timetable">
+        
+              <!-- Schedule Top Navigation -->
+              <nav class="nav nav-tabs">
+                <a class="nav-link active">LUNES</a>
+                <a class="nav-link">MARTES</a>
+                <a class="nav-link">MIÉRCOLES</a>
+                <a class="nav-link">JUEVES</a>
+                <a class="nav-link">VIERNES</a>
+                <a class="nav-link">SÁBADO</a>
+                <a class="nav-link">DOMINGO</a>
+              </nav>
+        
+              <div class="tab-content">
+                <div class="tab-pane show active">
+                  <div class="row">
+        
+                    <!-- Schedule Item 1 -->
+                    <div class="col-md-6">
+                      <div class="timetable-item">
+                        <div class="timetable-item-img">
+                          <img src="https://via.placeholder.com/100x80/FFB6C1/000000" alt="Contemporary Dance">
+                        </div>
+                        <div class="timetable-item-main">
+                          <div class="timetable-item-time">4:00pm - 5:00pm</div>
+                          <div class="timetable-item-name">Contemporary Dance</div>
+                          <a href="#" class="btn btn-book">PLAY</a>
+                          
+                        </div>
+                      </div>
+                    </div>
+        
+                    <!-- Schedule Item 2 -->
+                    <div class="col-md-6">
+                      <div class="timetable-item">
+                        <div class="timetable-item-img">
+                          <img src="https://via.placeholder.com/100x80/00FFFF/000000" alt="Break Dance">
+                        </div>
+                        <div class="timetable-item-main">
+                          <div class="timetable-item-time">5:00pm - 6:00pm</div>
+                          <div class="timetable-item-name">Break Dance</div>
+                          <a href="#" class="btn btn-book">PLAY</a>
+                        </div>
+                      </div>
+                    </div>
+        
+                    <!-- Schedule Item 3 -->
+                    <div class="col-md-6">
+                      <div class="timetable-item">
+                        <div class="timetable-item-img">
+                          <img src="https://via.placeholder.com/100x80/8A2BE2/000000" alt="Street Dance">
+                        </div>
+                        <div class="timetable-item-main">
+                          <div class="timetable-item-time">5:00pm - 6:00pm</div>
+                          <div class="timetable-item-name">Street Dance</div>
+                          <a href="#" class="btn btn-book">PLAY</a>
+                        </div>
+                      </div>
+                    </div>
+        
+                    <!-- Schedule Item 4 -->
+                    <div class="col-md-6">
+                      <div class="timetable-item">
+                        <div class="timetable-item-img">
+                          <img src="https://via.placeholder.com/100x80/6495ED/000000" alt="Yoga">
+                        </div>
+                        <div class="timetable-item-main">
+                          <div class="timetable-item-time">7:00pm - 8:00pm</div>
+                          <div class="timetable-item-name">Yoga</div>
+                          <a href="#" class="btn btn-book">PLAY</a>
+                        </div>
+                      </div>
+                    </div>
+        
+                    <!-- Schedule Item 5 -->
+                    <div class="col-md-6">
+                      <div class="timetable-item">
+                        <div class="timetable-item-img">
+                          <img src="https://via.placeholder.com/100x80/00FFFF/000000" alt="Stretching">
+                        </div>
+                        <div class="timetable-item-main">
+                          <div class="timetable-item-time">6:00pm - 7:00pm</div>
+                          <div class="timetable-item-name">Stretching</div>
+                          <a href="#" class="btn btn-book">PLAY</a>
+                         
+                        </div>
+                      </div>
+                    </div>
+        
+                    <!-- Schedule Item 6 -->
+                    <div class="col-md-6">
+                      <div class="timetable-item">
+                        <div class="timetable-item-img">
+                          <img src="https://via.placeholder.com/100x80/008B8B/000000" alt="Street Dance">
+                        </div>
+                        <div class="timetable-item-main">
+                          <div class="timetable-item-time">8:00pm - 9:00pm</div>
+                          <div class="timetable-item-name">Street Dance</div>
+                          <a href="#" class="btn btn-book">PLAY</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+      </div>
+  </div>
+
+  <!-- CONTACTANOS -->
+
+            <div class="title">
+                <div class="text">
+                    <h1>
+                        CONTACTANOS
+                    </h1>
+                </div>
+            </div>
+
+            <hr>
+            <div class="container">
+                <form>
+                    <div class="form-group">
+                      <label for="mail">Correo electrónico</label>
+                      <input type="email" class="form-control" id="mail"  placeholder="Ingresar email">
+                    </div>
+                    <div class="form-group">
+                        <label for="telefono">Teléfono</label>
+                        <input type="password" class="form-control" id="telefono"  placeholder="Ingresar número de teléfono">
+                      </div>
+                    <div class="form-group">
+                      <label for="exampleInputPassword1">Opinión</label>
+                      <textarea class="form-control" aria-label="With textarea" placeholder="Ingresar aquí el texto"></textarea>
+                    </div>
+                    
+                    <button type="submit" class="btn btn-class btn-block">ENVIAR</button>
+                  </form>
+            </div>
         </div>
     </div>
-    <div class="footer-separator"></div>
+
+    <div class="footer-separator">
+    <footer class="pt-4 my-md-5 pt-md-5 border-top">
+        <div class="row">
+          <div class="col-12 col-md" style="padding-left: 5vh;">
+            <img class="mb-2" src="assets/img/image2.png" alt="" width="50" height="50">
+            <small class="d-block mb-3 text-muted">&copy; RADIO TANIA</small>
+          </div>
+          <div class="col-6 col-md">
+            <h5>INSTAGRAM</h5>
+            <ul class="list-unstyled text-small">
+              <li><a class="text-muted" href="#">@radiotania</a></li>
+            </ul>
+          </div>
+          <div class="col-6 col-md">
+            <h5>CONTACTANOS</h5>
+            <ul class="list-unstyled text-small">
+              <li><a class="text-muted" href="#">3518484782</a></li>
+       
+            </ul>
+          </div>
+          <div class="col-6 col-md">
+              <h5>NUSTRO CORREO</h5>
+            <ul class="list-unstyled text-small">
+              <li><a class="text-muted" href="#">radiotania@gmail.com</a></li>
+            </ul>
+          </div>
+        </div>
+      </footer>   
+    </div>
 </div>
 
