--- a/web/src/app/shared/footer/footer.component.html
+++ b/web/src/app/shared/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="footer">
-    <div class="hidder" *ngIf="iframeVisibility">
+    <!-- <div class="hidder" *ngIf="iframeVisibility">
         <button class="button" (click)="hideIframe()">
             Esconder
         </button>
@@ -10,5 +10,5 @@
         <button class="buttonRep" (click)="hideIframe()">
             Reproductor
         </button>
-    </div>
+    </div> -->
 </div>
