--- a/web/src/app/shared/topmenu/topmenu.component.html
+++ b/web/src/app/shared/topmenu/topmenu.component.html
@@ -1,6 +1,9 @@
 <!-- <div class="top-container"></div> -->
 <div class="header">
+    
     <div class="container" style="max-width: 100% !important">
+        
+        
         <nav class="navbar navbar-expand-md navbar-light bg-faded">
             <div class="text-left">
                 <a routerLink="/home">
@@ -30,5 +33,19 @@
         </nav>
     </div>
 
+    
 
+
+    <div class="hidder" *ngIf="iframeVisibility">
+        <button class="button" (click)="hideIframe()">
+            Ocultar
+        </button>
+    </div>
+    <iframe *ngIf="iframeVisibility" src="https://radio11.argentinaservers.online/cp/widgets/player/single/?p=8236" height="110" width="100%" scrolling="no" style="border:none; background-color: black;"></iframe>
+    
+    <div class="hidder" *ngIf="!iframeVisibility">
+        <button class="buttonRep" (click)="hideIframe()">
+            Reproductor
+        </button>
+    </div>
 </div>
