api homes,adm homes, every page til date integrated

--- a/adm/src/app/audio/audio.component.html
+++ b/adm/src/app/audio/audio.component.html
@@ -22,7 +22,7 @@
                         <label>Provincias</label>
                         <select class="form-control" placeholder="Provincia" formControlName="province">
                             <option value="Buenos Aires">Buenos Aires</option>
-                            <!-- Capital Federal -->
+                            <!-- Ciudad de Buenos Aires? -->
                             <option value="Catamarca">Catamarca</option>
                             <option value="Chaco">Chaco</option>
                             <option value="Chubut">Chubut</option>
