--- a/adm/src/app/event/event.component.html
+++ b/adm/src/app/event/event.component.html
@@ -118,7 +118,7 @@
                 <div class="col-md-8 mt-4">
                     <div class="card">
                         <div class="card-header">
-                            Segunda imagen
+                            Segunda imagen (Evitable)
                         </div>
                         <div class="card-body">
                             <div class="row">
@@ -145,7 +145,7 @@
 
                 <div class="col-md-8">
                     <div class="form-group mb-3">
-                        <label>Título del video</label>
+                        <label>Título del video (Evitable)</label>
                         <input type="text" class="form-control" placeholder="Título del video" formControlName="titleVideo">
                     </div>
                 </div>
@@ -189,7 +189,7 @@
 
                 <div class="col-md-8" style="margin-top: 1em;">
                     <div class="form-group mb-3">
-                        <label>Título fotos</label>
+                        <label>Título fotos (Evitable)</label>
                         <input type="text" class="form-control" placeholder="Título fotos" formControlName="titlePhotos">
                     </div>
                 </div>
@@ -229,7 +229,7 @@
 
                 <div class="col-md-8" style="margin-top: 1em;">
                     <div class="form-group mb-3">
-                        <label>Título carrousel</label>
+                        <label>Título carrousel (Evitable)</label>
                         <input type="text" class="form-control" placeholder="Título carrousel" formControlName="titleCarrousel">
                     </div>
                 </div>
@@ -269,7 +269,7 @@
                 
                 <div class="col-md-8" style="margin-top: 1em;">
                     <div class="form-group mb-3">
-                        <label>Título link</label>
+                        <label>Título link (Evitable)</label>
                         <input type="text" class="form-control" placeholder="Título link" formControlName="titleLink">
                     </div>
                 </div>
@@ -288,7 +288,7 @@
                 
                 <div class="col-md-8" style="margin-top: 1em;">
                     <div class="form-group mb-3">
-                        <label>Título fondo</label>
+                        <label>Título fondo (Evitable)</label>
                         <input type="text" class="form-control" placeholder="Título fondo" formControlName="textBottom">
                     </div>
                 </div>
