--- a/web/src/app/videos/videos.component.html
+++ b/web/src/app/videos/videos.component.html
@@ -29,19 +29,19 @@
     <div class="categories">
       <div class="row">
         <div class="col-4">
-          <div class="square" (click)="goToPage('radioteatro')">
+          <div class="square" (click)="goToPage('Programas')">
             <h1>Programas</h1>
             <i class="fas fa-microphone"></i>
           </div>
         </div>
         <div class="col-4">
-          <div class="square" (click)="goToPage('radioteatro')">
+          <div class="square" (click)="goToPage('Presentaciones')">
             <h1>Presentaciones</h1>
             <i class="fas fa-user-friends"></i>
           </div>
         </div>
         <div class="col-4">
-          <div class="square" (click)="goToPage('radioteatro')">
+          <div class="square" (click)="goToPage('Bandas')">
             <h1>Bandas</h1>
             <i class="fas fa-guitar"></i>
             <!-- https://fontawesome.com/icons?d=gallery&q=camp -->
