--- a/web/src/app/audio/audio.component.html
+++ b/web/src/app/audio/audio.component.html
@@ -4,60 +4,36 @@
       <div class="text">
           <h1>Audios</h1>
       </div>
-  </div>
-  <div class="line"></div>
-  <div class="title">
-      <div class="row">
-        <div class="col-8">
-          <h1>
-            Cuentos
-          </h1>
-        </div>
-        <div class="col-4">
-          <i class="fas fa-book"></i>
+    </div>
+    <div class="line"></div>
+    <div class="title">
+        <div class="row">
+          <div class="col-8">
+            <h1>
+              {{province}}
+            </h1>
+          </div>
+          <div class="col-4">
+            <!-- <i class="fas fa-book"></i> -->
+          </div>
         </div>
       </div>
+    <div class="audios">
+      <ul class="list">
+        <li *ngFor="let item of audios">
+          <div class="element">
+            <h1>
+              {{item.title}}
+            </h1>
+            <div [innerHTML]="item.description"></div>
+            <audio controls controlsList="nodownload" [src]="getAudio(item.audio)" (type)="getType(item.audio)" >
+                Your browser does not support the audio element.
+            </audio>
+            <hr>
+          </div>
+        </li>
+      </ul>
     </div>
-  <div class="audios">
-    <ul class="list">
-      <li>
-        <div class="element">
-          <h1>
-            Audio stream
-          </h1>
-          <h3>
-            “Todas las Voces” proyecto que tiene por objetivo transmitir, 
-            difundir y valorar las producciones de: radioteatros, cuentos,
-            leyendas, mensaje al poblador rural, relato deportivo e historias
-            de todas las provincias de nuestro País.  
-          </h3>
-          <audio controls controlsList="nodownload">
-            <source src="../../assets/song.mpeg" type="audio/mpeg" >
-          Your browser does not support the audio element.
-          </audio>
-          <hr>
-        </div>
-      </li>
-      <li>
-        <div class="element">
-          <h1>
-            Audio stream
-          </h1>
-          <h3>
-            “Todas las Voces” proyecto que tiene por objetivo transmitir, 
-            difundir y valorar las producciones de: radioteatros, cuentos,
-            leyendas, mensaje al poblador rural, relato deportivo e historias
-            de todas las provincias de nuestro País.  
-          </h3>
-          <audio controls controlsList="nodownload">
-            <source src="../../assets/song.mpeg" type="audio/mpeg" >
-          Your browser does not support the audio element.
-          </audio>
-          <hr>
-        </div>
-      </li>
-    </ul>
-  </div>
   </div>
   
   <div class="footer-separator">
