--- a/web/src/app/event/event.component.html
+++ b/web/src/app/event/event.component.html
@@ -13,161 +13,98 @@
   <div>
       <div class="container">
             <div class="div4">
-                <h1>ENCUENTRO NACIONAL DE READIOTEATRO Y PROMOCIÓN DE LECTURA EN RADIO</h1>
-                <img src="../../assets/img/image3.png" alt="3" class="image">
+                <h1>{{event.title}}</h1>
+                <img [src]="getImage(event.firstImage)" alt="3" class="image">
             </div>
 
             <div class="div5">
                 <div class="row">
                     <div class="col-8">
-                        <p class="text">
-                            Encuentro Nacional de Radioteatro y Promoción de Lectura,
-                            <br>
-                            Celebrando el Centenario de la Radio se realizará en todo el país el Encuentro Nacional
-                            de Radioteatro y Promoción de Lectura en radio, bajo la consigna «Todas las radios,
-                            todas las provincias, todas las voces». El evento tendrá lugar del 5 al 8 de septiembre y
-                            contará con un espacio de capacitaciones virtuales. Del evento podrán participar
-                            personas de todas las provincias del país, especialmente elencos de radioteatro,
-                            actores, actrices, autores, autoras, programas radiales educativos, narradores,
-                            locutores, relatores deportivos, promotores de lectura en radio, dramaturgos,
-                            guionistas, productores, etc.
-                            <br>
-                            En la actualidad nos encontramos difundiendo “Todas las Voces” proyecto que tiene
-                            por objetivo transmitir, difundir y valorar las producciones de: radioteatros, cuentos,
-                            leyendas, mensaje al poblador rural, relato deportivo e historias de todas las
-                            provincias de nuestro País.
-                            <br>
-                            Dirección y Producción: Caminitos de Letras Cultura: 
-                            <a style="color: black;" href="mailto:lapoesiycuento12@gmail.com" target="_blank"> lapoesiycuento12@gmail.com</a>
-                        </p>
+                        <div [innerHTML]="event.description"></div>
                     </div>
                     <div class="col-4">
-                        <img src="../../assets/img/image4.png" alt="3" class="image">
+                        <img [src]="getImage(event.logo)" alt="3" class="image">
                     </div>
                 </div>
             </div>
 
-          <div style="width: 100%; height: 100%; text-align: center; margin: 2em 0em 2em 0em;"> 
-              <img src="../../assets/img/map.jpeg" alt="map" style="width: 70%; height: 100%;">
+          <div style="width: 100%; height: 100%; text-align: center; margin: 2em 0em 2em 0em;" *ngIf="event.secondImage === ''"> 
+              <img [src]="getImage(event.secondImage)" alt="map" style="width: 70%; height: 100%;">
           </div>
-          <div class="title">
+          <div class="title" *ngIf="event.titleVideo">
               <div class="text">
                   <h1>
-                      PRESENTACIÓN
+                    {{event.titleVideo}}
                   </h1>
               </div>
           </div>
   
-          <div class="div6">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/TXL-AjkFpJA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div class="div6" *ngIf="event.titleVideo">
+              <iframe width="560" height="315" (src)="event.videoUrl" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
   
-          <div class="title">
+          <div class="title" *ngIf="event.titlePhotos">
               <div class="text">
                   <h1>
-                      CRONOGRAMAS
+                    {{event.titlePhotos}}
                   </h1>
               </div>
           </div>
   
-          <div class="div7">
+          <div class="div7" *ngIf="event.titlePhotos">
               
               <div class="row">
-                  <div class="col-4 col-left">
-                      <img src="../../assets/img/cronogramas/1.png" alt="3" class="image" (click)="interactImage('../../assets/img/cronogramas/1.png')">
-                  </div>
-                  <div class="col-4 col-middle">
-                      <img src="../../assets/img/cronogramas/2.png" alt="3" class="image" (click)="interactImage('../../assets/img/cronogramas/2.png')">
-                  </div>
-                  <div class="col-4 col-right">
-                      <img src="../../assets/img/cronogramas/3.png" alt="3" class="image" (click)="interactImage('../../assets/img/cronogramas/3.png')">
+                  <div class="col-4 col-left" *ngFor="let item of event.photosRow">
+                      <img [src]="getImage(item)" alt="3" class="image" (click)="interactImage(item)">
                   </div>
               </div>
           </div>
   
-          <div class="title">
+          <div class="title" *ngIf="event.titleCarrousel">
               <div class="text">
                   <h1>
-                      TALLERISTAS
+                    {{event.titleCarrousel}}
                   </h1>
               </div>
           </div>
   
-          <div class="div8">        
+          <div class="div8" *ngIf="event.titleCarrousel">
               <carousel style="padding: 2em;">
-                  <slide *ngFor="let slide of slides; let index=index" class="slide">
-                      <img [src]="slide.image" alt="image slide" class="item">
+                  <slide *ngFor="let slide of event.carrouselPhotos; let index=index" class="slide">
+                      <img [src]="getImage(item)" alt="image slide" class="item">
                   </slide>
               </carousel>
           </div>
   
-          <div class="title">
+          <div class="title" *ngIf="event.titleLink">
               <div class="text">
                   <h1>
-                      INSCRIPCIÓN
+                    {{event.titleLink}}
                   </h1>
               </div>
           </div>
   
-          <div class="div9" onclick="window.open('https://forms.gle/25QBWWCpFrsbe4zm8', '_blank')">
-  
-          <!-- <div class="div9" onClick="window.location='https://forms.gle/25QBWWCpFrsbe4zm8'; target='_blank'"> -->
-  
+          <div class="div9" (onclick)="window.open(event.link, '_blank')" *ngIf="event.titleLink">
               <div class="text" >
                   <h2>
-                      FORMULARIO DE INSCRIPCIÓN
+                    {{event.linkText}}
                   </h2>
               </div>
-              <div class="line">
-  
-              </div>
+              <div class="line"></div>
           </div>
   
-          <div class="title">
+          <div class="title" *ngIf="event.textBottom">
               <div class="text">
                   <h1>
-                      ACOMPAÑAN
+                    {{event.textBottom}}
                   </h1>
               </div>
           </div>
   
-          <div class="div10">
+          <div class="div10" *ngIf="event.textBottom">
               <div class="row">
-                  <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-                      <img src="../../assets/img/acompa/1.png" alt="3" class="image">
-                  </div>
-                  <div class="col-xs-3 col-sm-2 col-md-2 col-lg-2">
-                      <img src="../../assets/img/acompa/2.png" alt="3" class="image">
-                  </div>
-                  <div class="col-2 col-left">
-                      <img src="../../assets/img/acompa/3.png" alt="3" class="image">
-                  </div>
-                  <div class="col-2 col-left">
-                      <img src="../../assets/img/acompa/4.png" alt="3" class="image">
-                  </div>
-                  <div class="col-2 col-left">
-                      <img src="../../assets/img/acompa/5.png" alt="3" class="image">
-                  </div>
-                  <div class="col-2 col-left">
-                      <img src="../../assets/img/acompa/6.png" alt="3" class="image">
-                  </div>
-                  <div class="col-2 col-left">
-                      <img src="../../assets/img/acompa/7.png" alt="3" class="image">
-                  </div>
-                  <div class="col-2 col-left">
-                      <img src="../../assets/img/acompa/8.png" alt="3" class="image">
-                  </div>
-                  <div class="col-2 col-left">
-                      <img src="../../assets/img/acompa/9.png" alt="3" class="image">
-                  </div>
-                  <div class="col-2 col-left">
-                      <img src="../../assets/img/acompa/10.png" alt="3" class="image">
-                  </div>
-                  <div class="col-2 col-left">
-                      <img src="../../assets/img/acompa/11.png" alt="3" class="image">
-                  </div>
-                  <div class="col-2 col-left">
-                      <img src="../../assets/img/acompa/12.png" alt="3" class="image">
+                  <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2" *ngFor="let item of event.bottomImages">
+                      <img [src]="getImage(item)" alt="3" class="image">
                   </div>
               </div>
           </div>
